scripts/nullaway/annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8.txt
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/QueueSystem.java:82: error: [NullAway] @NonNull field QueueSystem$QueueEntry.customer not initialized
        public Customer customer;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/QueueSystem.java:83: error: [NullAway] @NonNull field QueueSystem$QueueEntry.afterService not initialized
        public Event afterService;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/queue/Server.java:42: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.qs;
        ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:29: error: [NullAway] @NonNull static field queuesInfoMap not initialized
    private static HashMap<String, ArrayList<QueueInfo>> queuesInfoMap;
                                                         ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:30: error: [NullAway] @NonNull static field systemInfoMap not initialized
    private static ArrayList<QueueInfo> systemInfoMap;
                                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:31: error: [NullAway] @NonNull static field delaysInfoMap not initialized
    private static HashMap<String, ArrayList<Delay>> delaysInfoMap;
                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:32: error: [NullAway] @NonNull static field custDelay not initialized
    private static HashMap<Customer, Integer> custDelay;
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:33: error: [NullAway] @NonNull static field tempDelays not initialized
    private static HashMap<Customer, Delay> tempDelays;
                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:36: error: [NullAway] @NonNull static field timeAvgNumInQueue not initialized
    private static HashMap<String, Double> timeAvgNumInQueue;
                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:37: error: [NullAway] @NonNull static field maxNumInQueue not initialized
    private static HashMap<String, Integer> maxNumInQueue;
                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:38: error: [NullAway] @NonNull static field avgDelayInQueue not initialized
    private static HashMap<String, Double> avgDelayInQueue;
                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:39: error: [NullAway] @NonNull static field maxDelayInQueue not initialized
    private static HashMap<String, Integer> maxDelayInQueue;
                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:143: error: [NullAway] dereferenced expression temp is @Nullable
        QueueInfo info = temp.get(temp.size() - 1);
                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:143: error: [NullAway] dereferenced expression temp is @Nullable
        QueueInfo info = temp.get(temp.size() - 1);
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:184: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<QueueInfo> it = list.iterator();
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:210: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<QueueInfo> it = list.iterator();
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:266: error: [NullAway] dereferenced expression d is @Nullable
        d.to = SimulationClk.clock;
         ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:268: error: [NullAway] dereferenced expression list is @Nullable
        list.add(d);
            ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:282: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<Delay> it = list.iterator();
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:304: error: [NullAway] dereferenced expression list is @Nullable
        Iterator<Delay> it = list.iterator();
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:317: error: [NullAway] unboxing of a @Nullable value
        return maxNumInQueue.get(qType);
                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:326: error: [NullAway] unboxing of a @Nullable value
            sum += custDelay.get(next);
                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:339: error: [NullAway] unboxing of a @Nullable value
                sum += custDelay.get(next);
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/Statistics.java:352: error: [NullAway] unboxing of a @Nullable value
                int delay = custDelay.get(next);
                                         ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/global/EventsQueue.java:42: error: [NullAway] dereferenced expression e is @Nullable
        System.out.println("[" + SimulationClk.clock + "] " + e.getDescription());
                                                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlc4364d0d12_ahmedelmorsy_cafetria_simulation_tgz-pJ8-main_MainJ8/src/simulation/logging/FileLogger.java:12: error: [NullAway] initializer method does not guarantee @NonNull field out (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FileLogger(File f) {
           ^
    (see http://t.uber.com/nullaway )
26 errors
